# MetaVideoPlugin

./: build.gradle  settings.gradle
MetaVideoModule/: CMakeLists.txt  build.gradle
MetaVideoModule/src/androidTest/java/com/alg/meta/plugin/video/: ExampleInstrumentedTest.kt
MetaVideoModule/src/main/: AndroidManifest.xml
MetaVideoModule/src/main/cpp/: ALGVideo.cpp  alog.h  decode_video.c  decode_video.h  ffmpeg_jni.cpp
MetaVideoModule/src/main/cpp/include/libavutil/: ffversion.h
MetaVideoModule/src/main/java/com/alg/meta/plugin/video/: AlgFFmpegRenderFactory.kt  AlgVidePlayer.kt  ControllerState.kt  ExoPlayer.kt  Media.kt  MediaState.kt  PlayerActivity.kt  PlayerState.kt  ResizeMode.kt  SimpleController.kt  TimeBar.kt
MetaVideoModule/src/main/java/com/google/android/exoplayer2/ext/ffmpeg/: FfmpegAudioDecoder.java  FfmpegAudioRenderer.java  FfmpegDecoderException.java  FfmpegLibrary.java
MetaVideoModule/src/test/java/com/alg/meta/plugin/video/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/alg/meta/plugin/video/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alg/meta/plugin/video/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
